--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="container__page">
+        <div class="container__login container">
+            <div class="col">
+                <h3>Login</h3>
+                <p class="info">Username</p>
+                <input type="text" name="loginUser" id="userLogin" placeholder="username">
+                <p class="info">Senha</p>
+                <input type="text" name="senhaUser" id="userSenha" placeholder="********">
+                <button id="buttonLogin">Logar</button>
+                <a href="#">Usuários válidos</a>
+                <img src="img/logo_colorida.png" alt="Diamond Solutions">
+                <p class="direitos">Direitos reservados</p>
+            </div>
+        </div> 
+    </div>
     
 </body>
 </html>
