--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
     <div class="container__page">
         <div class="container__login container">
             <div class="col">
-                <h3>Login</h3>
-                <p class="info">Username</p>
-                <input type="text" name="loginUser" id="userLogin" placeholder="username">
-                <p class="info">Senha</p>
-                <input type="text" name="senhaUser" id="userSenha" placeholder="********">
-                <button id="buttonLogin">Logar</button>
-                <a href="#">Usuários válidos</a>
+                <h3>LoginDummy</h3>
+                <div class="parteName">
+                    <p class="info">Username</p>
+                    <input type="text" name="loginUser" id="userLogin" placeholder="username">   
+                </div>
+                <div class="parteSenha">
+                    <p class="info">Senha</p>
+                    <input type="text" name="senhaUser" id="userSenha" placeholder="********"> 
+                </div>
+                
+                <button id="buttonLogin">Logar</button><br>
+                <a class="userValidos" href="#">Usuários válidos</a><br>
                 <img src="img/logo_colorida.png" alt="Diamond Solutions">
                 <p class="direitos">Direitos reservados</p>
             </div>
