CSS e Page usuários
Adicionado a página dos utilizadores, e a estilização de usuários válidos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 
                 <button id="buttonLogin">Logar</button><br>
-                <a class="userValidos" href="#">Usuários válidos</a><br>
+                <a class="userValidos" href="https://dummyjson.com/users">Usuários válidos</a><br>
                 <img src="img/logo_colorida.png" alt="Diamond Solutions">
                 <p class="direitos">Direitos reservados</p>
             </div>
